# cmt-mixed-code-test

./: .gitignore  TEST-PLAN.md  check.toml  eslint.config.js  issues.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  status-tracker.md  tsconfig.json
bug-hunting-tests/disable-comments/: edge_cases.py  false_positives.py  multiline-disable.ts
bug-hunting-tests/duplicate-ext-test/: MyPascalCase.ts  my-typescript-file.ts  my_typescript_file.ts
bug-hunting-tests/long-name/: this-is-a-very-long-filename-that-tests-the-limits-of-the-naming-convention-checker-in-check-my-toolkit.ts
bug-hunting-tests/monorepo-test/: check.toml  eslint.config.js  package.json  tsconfig.json
bug-hunting-tests/secrets/: base64_secret.ts  connection_strings.py  false_positive_secrets.ts  private_key.pem
bug-hunting-tests/special-chars/: file with spaces.ts  file$with$dollars.ts  file[with]brackets.py
bug-hunting-tests/test-configs/: circular-extends.toml  coverage-bad-command.toml  coverage-edge-100.toml  coverage-edge-zero.toml  coverage-empty-command.toml  duplicate-extension-full.toml  duplicate-extension.toml  empty-files-array.toml  empty.toml  full-config-single-rule.toml  full-config-with-duplicate.toml  invalid-toml.toml  missing-registry.toml  negative-threshold.toml  original-with-duplicate.toml  single-ext-overlap.toml  single-rule-kebab.toml  single-rule-snake.toml  threshold-over-100.toml  unknown-case.toml  unknown-tool.toml  wrong-types.toml
bug-hunting-tests/unicode-tests/: café-module.ts  emoji_🚀_test.py  日本語ファイル.ts
src/python/: __init__.py  (+2 more)
(+62 files in other folders)
